Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24328

QtTest integration hides sanitizer issues

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 4.15.0-beta1
    • Qt Creator 4.13.0-beta1
    • Test Integration
    • None
    • Ubuntu 18.04 LTS 64 bit
      Qt 5.15 branch
      clang 7.0.0
    • 1133e26d3a2433a3ab51c735d3effad807838e2f (qt-creator/qt-creator/master)

    Description

      1. Have a build of Qt with configure flags "-sanitize address" or "-sanitize undefined".
      2. Open the attached project and configure it to use that Qt.
      3. Run the project.
        The sanitizers will report the problems in the Application Output view.
      4. Clear the Application Output view.
      5. Run the tests from the Test Results view.
        The view will neither report issues, nor will anything be written to the Application Output view. Creator will only write the issues to the calling command line.

      This makes it easy to miss serious issues in the tested code. At least when the address sanitizer crashes the test, the Test Results view should make clear that there was something wrong. Writing output to the Application Output view might help as well.

      Attachments

        1. testproject.pro
          0.1 kB
        2. tst_sanitizer.cpp
          0.6 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            cstenger Christian Stenger
            rlohning Robert Löhning
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes