AutoTest: Handle sanitizer output

This is an attempt to handle output coming from
sanitizers appropriate.

Task-number: QTCREATORBUG-24328
Change-Id: Ifb22d465c9f99d767cc7702b9c459076ab39d567
Reviewed-by: Robert Loehning <robert.loehning@qt.io>